# lattice-zksnark

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
lwe/: CMakeLists.txt  lwe.hpp  lwe_params.hpp
lwe/container/: data_structure.hpp  extension.hpp  field_base.hpp  ring_base.hpp  utils.hpp
lwe/randomness/: aes.hpp  prg.hpp
lwe/snark/: r1cs_lattice_snark.hpp  r1cs_lattice_snark_common.hpp  r1cs_lattice_snark_lpcp_tr.hpp
lwe/tests/: circ_lattice_params.hpp  common.hpp
lwe/tests/SNARK/: test_r1cs_lattice_snark_p13.cpp  test_r1cs_lattice_snark_p13_lpcp_tr.cpp  test_r1cs_lattice_snark_p19.cpp  test_r1cs_lattice_snark_p19_lpcp_tr.cpp  test_r1cs_lattice_snark_p23.cpp  test_r1cs_lattice_snark_p28.cpp
